# bunnymark-c

./: README.md  compile_and_run.sh  main.c  meson.build  notes.c
builddir/: .ninja_deps  .ninja_log  build.ninja  bunnymark  compile_commands.json
builddir/meson-info/: intro-buildsystem_files.json  intro-dependencies.json  intro-projectinfo.json  intro-targets.json  meson-info.json
builddir/meson-logs/: meson-log.txt
